--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "lint": "next lint",
     "pages:build": "next build && npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev"
+    "preview": "npm run pages:build && wrangler pages dev",
+    "deploy": "npm run pages:build && npx wrangler pages deploy .vercel/output/static ebn"
   },
   "dependencies": {
     "@number-flow/react": "^0.5.10",
