--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "lint": "next lint",
-    "pages:build": "next build && npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && npx wrangler pages deploy .vercel/output/static ebn"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@number-flow/react": "^0.5.10",
@@ -26,7 +24,6 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
